Style numbered pagination to ensure current page is visible

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -507,6 +507,64 @@ form .row:first-child .floating-label-form-group {
   background-color: #404040;
   cursor: not-allowed;
 }
+/* Numbered pagination */
+.pagination-container {
+  margin: 30px 0 10px;
+}
+.pagination {
+  margin: 0;
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-left: 0;
+  list-style: none;
+  border-radius: 0;
+}
+.pagination > li {
+  display: inline-block;
+}
+.pagination > li > a,
+.pagination > li > span {
+  position: relative;
+  float: left;
+  font-family: "Helvetica Neue", Arial, "Hiragino Sans GB", "STHeiti", "Microsoft YaHei", "WenQuanYi Micro Hei", SimSun, sans-serif;
+  font-size: 14px;
+  font-weight: 800;
+  letter-spacing: 1px;
+  line-height: 1.5;
+  padding: 10px 16px;
+  margin: 0 3px;
+  color: #404040;
+  background-color: #fff;
+  border: 1px solid #e0e0e0;
+  border-radius: 0;
+  text-decoration: none;
+  transition: all 0.2s ease-in-out;
+}
+.pagination > li > a:hover,
+.pagination > li > a:focus {
+  z-index: 2;
+  color: #fff;
+  background-color: #00c9d7;
+  border-color: #00c9d7;
+}
+.pagination > .active > span,
+.pagination > .active > span:hover,
+.pagination > .active > span:focus {
+  z-index: 3;
+  color: #fff;
+  background-color: #0085a1;
+  border-color: #0085a1;
+  cursor: default;
+}
+.pagination > .disabled > span,
+.pagination > .disabled > span:hover,
+.pagination > .disabled > span:focus {
+  color: #c0c0c0;
+  background-color: #fff;
+  border-color: #e0e0e0;
+  cursor: not-allowed;
+}
 ::-moz-selection {
   color: white;
   text-shadow: none;
